FIX: button visible on empty input

--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,11 @@ footer {
 .footerDiv {
   padding: 0%;
 }
+
+button:disabled {
+  background: grey;
+}
+
 @media screen and (max-width: 800px) and (min-width: 434px) {
   
   .hero {
